# aria-realtime-latent-studio

./: .gitignore  LICENSE  README.md  STATUS.md  pyproject.toml  requirements.txt  run_cadenza_respond.sh  run_gui.sh
assets/: demo-tokenizer-config.json
config/: midi_devices.json
gui/: __init__.py  app.py
gui/static/: index.html
latent/: __init__.py  aria_vae_backend.py  aria_vae_mlx_backend.py  attributes.py  base.py  cadenza_backend.py  cadenza_mlx_backend.py  probe.py
models/: __init__.py  registry.py
realtime/: __init__.py  aria_demo_mlx.py  engine.py
scripts/: build_probe.py  download_models.py  latent_cli.py  smoke_test.py
src/data/: pertok_tokenizer.py
studio/: __init__.py
studio/mlx_vae/: __init__.py  _golden_ref.py  _golden_ref_cadenza.py  aria_vae_mlx.py  cadenza_mlx.py  cadenza_two_stage_mlx.py  convert.py  convert_cadenza.py  fit_latent_directions.py  fit_latent_directions_cadenza.py  generate_latent.py  generate_latent_cadenza.py  grammar.py  latent_control.py  parity_check.py  parity_check_cadenza.py
